- New configuration: `indexShardCount`. Tune this value based on your total dataset to ensure each index shard stays below the OS mmap file size limit (Windows ~4 GiB). - Existing `index.chm` will not be automatically split. Recommended options:   1. Trigger a reload/rebuild with the new `indexShardCount` (recommended): the reload process will create the sharded ChronicleMap files and reindex entries.   2. Implement an explicit migration script that reads keys from the old index and writes them into the new shards. Rebuild is generally safer and simpler. - If ChronicleMap creation fails (library mismatch or native issue), the manager falls back to an in-memory index and logs a warning: `falling back to in-memory index`.